--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "pandas>=2.1.0",
     "scipy>=1.11.0",
     "neo4j>=5.0.0",
+    "openai>=1.0.0",
 ]
 
 [tool.setuptools.packages.find]
