--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "scipy>=1.11.0",
     "neo4j>=5.0.0",
     "openai>=1.0.0",
+    "mcp[cli]>=1.0.0",
 ]
 
 [tool.setuptools.packages.find]
