--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,9 @@ NEO4J_URI=bolt://localhost:7687
 NEO4J_USER=neo4j
 NEO4J_PASSWORD=your_neo4j_password
 
+# Main cluster configuration - number of top clusters to combine into main cluster
+MAIN_CLUSTER_SIZE=2
+
 # Example for different providers:
 # For OpenAI:
 # OPENAI_API_BASE=https://api.openai.com/v1
