--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,9 @@ NEO4J_PASSWORD=your_neo4j_password
 # Main cluster configuration - number of top clusters to combine into main cluster
 MAIN_CLUSTER_SIZE=2
 
+# SQL execution configuration - maximum tokens before truncating results
+SQL_MAX_TOKENS=10000
+
 # Example for different providers:
 # For OpenAI:
 # OPENAI_API_BASE=https://api.openai.com/v1
