Update find_path to find multiple

--- a/.env.example
+++ b/.env.example
@@ -28,6 +28,9 @@ MAIN_CLUSTER_SIZE=2
 # SQL execution configuration - maximum tokens before truncating results
 SQL_MAX_TOKENS=10000
 
+# Path finding configuration - maximum hops to explore when finding table connections
+MAX_HOPS=3
+
 # Example for different providers:
 # For OpenAI:
 # OPENAI_API_BASE=https://api.openai.com/v1
